2006-01-05 Matthias Trute <mtrute@users.sf.net>
  *  loconet.* Feedback Sensors and basic loconet communication via
       loconbuffer implemented
  * srcp-session.* and srcp-sm.*: Support for SM GET/SET (still not
       working)

2006-01-03 Frank Schmischke <frank.schmischke@t-online.de>
  *.h *.c: change busnumber from int to long int for x86_64

2005-10-14 Guido Scholz <guido.scholz@bayernline.de>
  * *.c: some non-ASCII strings fixed

2005-10-11 Guido Scholz <guido.scholz@bayernline.de>
  * configure.in, Makefile.am, src/Makefile.am: adaptations to new
  src directory

2005-10-07 Guido Scholz <guido.scholz@bayernline.de>
  * debian:  debian control files added

2005-08-20 Matthias Trute <mtrute@users.sf.net>
  * DDL code did not compile (syntax error with gcc 3.3.5)
  * default values for all busses with busnumber > 0 defined.

2005-07-11 Guido Scholz <guido.scholz@bayernline.de>
  * configure.in, ttycygwin.c ttycygwin.h, ddl-s88.c, ib.c,
  selectix.c, m605x.c: cygwin support added

2005-06-05  Matthias Trute    <mtrute@users.sf.net>
  * removed ibox kernel module
  * integrated (only) zimo GL patches from Johann
      Vieselthaler, dropped GA Support
  * re-set default runtime config to loopback bus
  * prepared release 2.0.8.
  * minor cleanups (^M removed)

2005-05-16  Frank Schmischke  <frank.schmischke@t-online.de>

  * li100: various improvements

2005-04-08  Frank Schmischke  <frank.schmischke@t-online.de>

  * li100: sendGL; sendGA.. for Lenz

2005-03-28  Frank Schmischke  <frank.schmischke@t-online.de>

  * hsi-88: improve detect interface on usb-seriell-adapter
  * li100: check version of LZ100 send GL for version >= 3.00

2005-03-14  Manuel Borchers <manuel@matronix.de>

  * i2c-dev: major modifications of writting to i2c-devices
            by Ulrich Eckhardt <uli.e@gmx.de>;
            better initialisation and better power handling

2005-01-09  Matthias Trute <mtrute@users.sourceforge.net>

  * corrected some misplaced config.h occurancies.
